    vectorization of other hyge functions. Allows different inputs lengths 
    for x and t,m,n parameters, with broadcast expanded output (bug #34363)
    
 ** hygecdf.m: improved vectorization for non-scalar inputs.
    hygeinv.m
    hygernd.m
 
 ** ismissing.m: corrects handling of n-D arrays, NaN indicators, and improves
    matlab compatibility for different data types. (patch #10102)
 
 ** laplace_cdf.m: allow for parameters mu and scale (bug #58688)
    laplace_inv.m
    laplace_pdf.m
    logistic_cdf.m
    logistic_inv.m
    logistic_pdf.m
 
 ** pdf.m: extended to include all available distributions
    
 ** pdist.m: updated the 'cosine' metric to be more efficient (bug #62495)
 
 ** rmmissing.m: corrects cellstr array handling and
    improves matlab compatibility for different data types. (patch #10102)
 
 ** signtest.m: fix erroneous results, fully Matlab compatible (bug #49961)
 
 ** ttest2.m: can hale NaN values as missing data (bug #58697)
 
 ** violin.m: fix parsing color vector affecting Octave>=6.1.0 (bug #62805)
 
 ** wblplot.m: fixed coding style and help texinfo. (patch #8579)
  
 Removed Functions:
 ==================
 
 ** wilcoxon_test (replaced by ranksum)
 
 ** kruskal_wallis_test (replaced by kruskalwallis)
 
 ** sign_test (replaced by updated signtest)
 
 Available Data Sets:
 ====================
 
 ** acetylene     Chemical reaction data with correlated predictors
 ** arrhythmia    Cardiac arrhythmia data from the UCI machine learning repository
 ** carbig        Measurements of cars, 1970–1982
 ** carsmall      Subset of carbig. Measurements of cars, 1970, 1976, 1982
 ** cereal        Breakfast cereal ingredients
 ** examgrades    Exam grades on a scale of 0–100
 ** fisheriris    Fisher's 1936 iris data
 ** hald          Heat of cement vs. mix of ingredients
 ** kmeansdata    Four-dimensional clustered data
 ** mileage       Mileage data for three car models from two factories