@@ -51,6 +51,8 @@ Summary of important user-visible changes for statistics 1.5.0:
  ** ismissing.m: corrects handling of n-D arrays, NaN indicators, and improves
     matlab compatibility for different data types. (patch #10102)
  
+ ** kmeans.m: improved help file, evaluate efficieny (bug #8959)
+ 
  ** laplace_cdf.m: allow for parameters mu and scale (bug #58688)
     laplace_inv.m
     laplace_pdf.m
